using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using Pathfinding;

public class ZombieFollow : StateMachineBehaviour
{
    AIDestinationSetter destinationSetter;
    AIPath ai;
    Transform player;

    // OnStateEnter is called when a transition starts and the state machine starts to evaluate this state
    override public void OnStateEnter(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        animator.SetBool("Patrolling",false);
        player = GameObject.FindGameObjectWithTag("Player").GetComponent<Transform>();
        destinationSetter = animator.GetComponent<AIDestinationSetter>();
        ai = animator.GetComponent<AIPath>();
        destinationSetter.target = player;
        ai.canMove = true;
        if (animator.transform.GetChild(1).GetComponent<ZombieAttackArea>() != null)
        {
            if(animator.transform.GetChild(1).GetComponent<ZombieAttackArea>().canAttack == true)
            {
                animator.SetBool("Attacking", true);
            }
        }
        else if (animator.transform.GetChild(1).GetComponent<MarthaAttackArea>() != null)
        {
            if(animator.transform.GetChild(1).GetComponent<MarthaAttackArea>().canAttack == true)
            {
                animator.SetBool("Attacking", true);
            }            
        }
    }

    // OnStateUpdate is called on each Update frame between OnStateEnter and OnStateExit callbacks
    //override public void OnStateUpdate(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    //{
    //    
    //}

    // OnStateExit is called when a transition ends and the state machine finishes evaluating this state
    override public void OnStateExit(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    {
        if (animator.GetFloat("Distance") > 40)
        {
            destinationSetter.target = null;
            ai.canMove = false;
        }
        ai.canMove = false;
    }

    // OnStateMove is called right after Animator.OnAnimatorMove()
    //override public void OnStateMove(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    //{
    //    // Implement code that processes and affects root motion
    //}

    // OnStateIK is called right after Animator.OnAnimatorIK()
    //override public void OnStateIK(Animator animator, AnimatorStateInfo stateInfo, int layerIndex)
    //{
    //    // Implement code that sets up animation IK (inverse kinematics)
    //}    
}
